Swagger docs modified
